--- a/css/style.css
+++ b/css/style.css
@@ -1079,6 +1079,14 @@ main #nashixyuristov {
   margin-top: 80px;
   margin-left: -20px;
 }
+main #nashixyuristov h2 {
+  font-family: "Open Sans Bold";
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: -0.96px;
+  color: #140A32;
+  margin-bottom: 30px;
+}
 main #nashixyuristov .yuristov {
   display: flex;
   width: 100%;
