--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1088,6 +1088,15 @@ main
 
         margin-top: 80px;
         margin-left: -20px;
+        h2{
+            font-family: "Open Sans Bold";
+            font-size: 32px;
+            font-weight: 700;
+            letter-spacing: -0.96px;
+            color: #140A32;
+            margin-bottom: 30px; 
+           
+        }
 
         .yuristov
         {
